RESOLVED FIXED236418
[LFC][IFC] Adjust asserts in InlineDisplayContentBuilder::processBidiContent to support vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=236418
Summary [LFC][IFC] Adjust asserts in InlineDisplayContentBuilder::processBidiContent ...
alan
Reported 2022-02-09 16:46:13 PST
ssia
Attachments
Patch (2.89 KB, patch)
2022-02-09 16:49 PST, alan
no flags
alan
Comment 1 2022-02-09 16:49:16 PST
EWS
Comment 2 2022-02-10 15:44:04 PST
Committed r289589 (247102@main): <https://commits.webkit.org/247102@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451460 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-10 15:45:19 PST
Note You need to log in before you can comment on or make changes to this bug.