[LFC][IFC] Adjust asserts in InlineDisplayContentBuilder::processBidiContent to support vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=236418

Reviewed by Antti Koivisto.

This is in preparation for adding vertical writing mode support.

* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):



Canonical link: https://commits.webkit.org/247102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289589 268f45cc-cd09-0410-ab3c-d52691b4dbfc